[AQ-293] Add first-run bootstrap endpoints
